--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,9 @@
     <div class="right">
         <div th:if="${user != null}">
             <span style="color: white" th:text="${user.nickname} + '님 환영합니다'"></span>
-            <a href="/logout">로그아웃</a>
+            <form action="/logout" method="post">
+                <button type="submit">로그아웃</button>
+            </form>
         </div>
         <div th:if="${user == null}">
             <a href="/login">로그인</a>
