--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -125,6 +125,12 @@
                 </div>
                 <div class="comment-content" th:text="${comment.content}">Comment Content</div>
             </div>
+            <div th:if="${user.id == comment.writer.id}">
+                <form th:action="@{/comment/delete/{id}(id=${comment.id})}" method="post">
+                    <input type="text" name="task" th:value="${task.id}" hidden="hidden"/>
+                    <button type="submit">삭제</button>
+                </form>
+            </div>
         </div>
 
         <!-- Comment Form -->
