feat: 회원 정보 수정 기능 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,17 +13,20 @@
         <div th:if="${user != null}">
             <div style="display: flex">
                 <span style="color: white" th:text="${user.nickname} + '님 환영합니다'"></span>
-                <form action="/logout" method="post">
+                <form action="/users/logout" method="post">
                     <button type="submit">로그아웃</button>
                 </form>
-                <form action="/cancel" method="post">
+                <form action="/users/delete" method="post">
                     <button type="submit">회원탈퇴</button>
+                </form>
+                <form action="/users/update" method="get">
+                    <button type="submit">회원정보수정</button>
                 </form>
             </div>
         </div>
         <div th:if="${user == null}">
-            <a href="/login">로그인</a>
-            <a href="/signup">회원가입</a>
+            <a href="/users/login">로그인</a>
+            <a href="/users/signup">회원가입</a>
         </div>
     </div>
 </div>
