--- a/src/main/resources/templates/signup-success.html
+++ b/src/main/resources/templates/signup-success.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h2>회원가입이 성공적으로 완료되었습니다!</h2>
-<a href="/login">로그인 페이지로 이동</a>
+<a href="/users/login">로그인 페이지로 이동</a>
 </body>
 </html>
