--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -85,22 +85,25 @@
 <body>
 <div class="navbar">
     <a href="/">홈</a>
-    <a href="/mypage">마이 페이지</a>
+    <a href="/users/me">마이 페이지</a>
     <div class="right">
         <div th:if="${user != null}">
             <div style="display: flex">
                 <span style="color: white" th:text="${user.nickname} + '님 환영합니다'"></span>
-                <form action="/logout" method="post">
+                <form action="/users/logout" method="post">
                     <button type="submit">로그아웃</button>
                 </form>
-                <form action="/cancel" method="post">
+                <form action="/users/delete" method="post">
                     <button type="submit">회원탈퇴</button>
+                </form>
+                <form action="/users/update" method="get">
+                    <button type="submit">회원정보수정</button>
                 </form>
             </div>
         </div>
         <div th:if="${user == null}">
-            <a href="/login">로그인</a>
-            <a href="/signup">회원가입</a>
+            <a href="/users/login">로그인</a>
+            <a href="/users/signup">회원가입</a>
         </div>
     </div>
 </div>
@@ -158,7 +161,7 @@
             </form>
         </div>
         <div th:if="${user == null}">
-            <p>댓글을 작성하려면 <a href="/login">로그인</a> 해주세요.</p>
+            <p>댓글을 작성하려면 <a href="/users/login">로그인</a> 해주세요.</p>
         </div>
     </div>
 </div>
