--- a/src/main/resources/templates/user-update.html
+++ b/src/main/resources/templates/user-update.html
@@ -63,21 +63,17 @@
 </head>
 <body>
 <div class="signup-container">
-    <h2>회원가입</h2>
-    <form action="/users/signup" method="post">
-        <div>
-            <label for="loginId">아이디</label>
-            <input type="text" id="loginId" name="loginId" required minlength="4" maxlength="20">
-        </div>
+    <h2>회원 정보 수정</h2>
+    <form action="/users/update" method="post">
         <div>
             <label for="password">비밀번호</label>
             <input type="password" id="password" name="password" required minlength="8">
         </div>
         <div>
             <label for="nickname">닉네임</label>
-            <input type="text" id="nickname" name="nickname" required minlength="2" maxlength="10">
+            <input type="text" id="nickname" name="nickname" required minlength="2" maxlength="10" th:value="${user.nickname()}">
         </div>
-        <button type="submit">회원가입</button>
+        <button type="submit">수정</button>
     </form>
 </div>
 </body>
