--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="navbar">
     <a href="/" class="active">홈</a>
-    <a href="/mypage">마이 페이지</a>
+    <a href="/users/me">마이 페이지</a>
     <div class="right">
         <div th:if="${user != null}">
             <div style="display: flex">
@@ -33,7 +33,7 @@
 
 <div class="task-container">
     <div th:each="task : ${tasks}" class="task-card">
-        <a th:href="@{/task/{id}(id=${task.id})}"><h2 th:text="${task.title}">할 일 제목</h2></a>
+        <a th:href="@{/tasks/{id}(id=${task.id})}"><h2 th:text="${task.title}">할 일 제목</h2></a>
         <p th:class="${task.completed ? 'completed' : 'not-completed'}"
            th:text="${task.completed ? '완료됨' : '완료되지 않음'}"></p>
         <p th:text="'작성자: ' + ${task.writer.nickname}">작성자</p>
