--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -33,12 +33,12 @@
 <h2 style="text-align: center">내 할일 목록</h2>
 <div class="task-container">
     <div th:each="task : ${user.task}" class="task-card">
-        <a th:href="@{/task/{id}(id=${task.id})}"><h2 th:text="${task.title}">할 일 제목</h2></a>
+        <a th:href="@{/tasks/{id}(id=${task.id})}"><h2 th:text="${task.title}">할 일 제목</h2></a>
         <p th:class="${task.completed ? 'completed' : 'not-completed'}"
            th:text="${task.completed ? '완료됨' : '완료되지 않음'}"></p>
     </div>
     <div class="task-card">
-        <a th:href="@{/task/create}"><h2>새로운 할 일 작성하기</h2></a>
+        <a th:href="@{/tasks/create}"><h2>새로운 할 일 작성하기</h2></a>
     </div>
 </div>
 </body>
