--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -116,19 +116,26 @@
     <div class="task-content" th:text="${task.content}">Task Content</div>
     <div class="task-deadline">마감기한: <span th:text="${task.deadline}">Deadline</span></div>
     <div class="task-likes">좋아요 수: <span th:text="${task.likesNum}">0</span></div>
-    <form action="/like" method="post">
-        <div th:if="${user != null && !task.writer.id.equals(user.id)}">
-            <button type="submit">좋아요</button>
-            <input type="text" name="task" th:value="${task.id}" hidden="hidden"/>
-        </div>
-
-    </form>
-    <form th:action="@{/task/delete/{id}(id=${task.id})}" method="post">
-        <div th:if="${user != null && task.writer.id.equals(user.id)}">
-            <button type="submit">삭제</button>
-            <input type="text" name="task" th:value="${task.id}" hidden="hidden"/>
-        </div>
-    </form>
+    <div style="display: flex">
+        <form action="/like" method="post">
+            <div th:if="${user != null && !task.writer.id.equals(user.id)}">
+                <button type="submit">좋아요</button>
+                <input type="text" name="task" th:value="${task.id}" hidden="hidden"/>
+            </div>
+        </form>
+        <form th:action="@{/tasks/update/{id}(id=${task.id})}" method="get">
+            <div th:if="${user != null && task.writer.id.equals(user.id)}">
+                <button type="submit">수정</button>
+                <input type="text" name="task" th:value="${task.id}" hidden="hidden"/>
+            </div>
+        </form>
+        <form th:action="@{/tasks/delete/{id}(id=${task.id})}" method="post">
+            <div th:if="${user != null && task.writer.id.equals(user.id)}">
+                <button type="submit">삭제</button>
+                <input type="text" name="task" th:value="${task.id}" hidden="hidden"/>
+            </div>
+        </form>
+    </div>
     <div class="comments">
         <h3>댓글</h3>
         <div th:each="comment : ${task.comments}">
