--- a/src/main/resources/templates/comment-update.html
+++ b/src/main/resources/templates/comment-update.html
@@ -39,15 +39,6 @@
         form {
             padding: 10px 15px;
         }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
     </style>
 </head>
 <body>
@@ -75,31 +66,14 @@
         </div>
     </div>
 </div>
-<div class="container">
-<h1>할 일 수정</h1>
-<form th:action="@{/tasks/update/{id}(id=${request.id})}" th:object="${request}" method="post">
+<h1>댓글 수정</h1>
+<form th:action="@{/comments/update/{id}(id=${commentId})}" method="post">
     <div class="form-group">
-        <label for="title">제목:</label>
-        <input type="text" id="title" th:field="*{title}" placeholder="제목을 입력하세요"/>
-    </div>
-
-    <div class="form-group">
+        <input type="hidden" name="task" th:value="${taskId}">
         <label for="content">내용:</label>
-        <textarea id="content" th:field="*{content}" placeholder="내용을 입력하세요" rows="5"></textarea>
+        <textarea id="content" name="content" th:text="${content}" placeholder="내용을 입력하세요" rows="5"></textarea>
     </div>
-
-    <div class="form-group">
-        <label for="deadline">마감기한:</label>
-        <input type="datetime-local" id="deadline" name="deadline" th:value="${request.deadline}"/>
-    </div>
-
-    <div class="form-group">
-        <label for="completed">완료여부:</label>
-        <input type="checkbox" id="completed" th:field="*{completed}" th:checked="${request.completed}"/>
-    </div>
-
     <button type="submit">수정</button>
 </form>
-</div>
 </body>
 </html>
