--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -8,7 +8,7 @@
 <body>
 <div class="navbar">
     <a href="/">홈</a>
-    <a href="/mypage" class="active">마이 페이지</a>
+    <a href="/users/me" class="active">마이 페이지</a>
     <div class="right">
         <div th:if="${user != null}">
             <div style="display: flex">
@@ -32,13 +32,15 @@
 </div>
 <h2 style="text-align: center">내 할일 목록</h2>
 <div class="task-container">
-    <div th:each="task : ${user.task}" class="task-card">
+    <div th:each="task : ${tasks}" class="task-card">
         <a th:href="@{/tasks/{id}(id=${task.id})}"><h2 th:text="${task.title}">할 일 제목</h2></a>
         <p th:class="${task.completed ? 'completed' : 'not-completed'}"
            th:text="${task.completed ? '완료됨' : '완료되지 않음'}"></p>
-    </div>
-    <div class="task-card">
-        <a th:href="@{/tasks/create}"><h2>새로운 할 일 작성하기</h2></a>
+        <p>생성날짜: <span th:text="${task.createdDate.toLocalDate()}">Created Date</span>
+            <span th:text="${task.createdDate().toLocalTime()}">Created Date</span></p>
+        <p>마감날짜: <span th:text="${task.deadline().toLocalDate()}">Created Date</span>
+            <span th:text="${task.deadline().toLocalTime()}">Created Date</span></p>
+        <p th:text="'좋아요 수: ' + ${task.likesNum}">좋아요 수</p>
     </div>
 </div>
 </body>
