--- a/src/main/resources/templates/signup-success.html
+++ b/src/main/resources/templates/signup-success.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입 성공</title>
+    <link rel="stylesheet" th:href="@{/css/nav.css}">
 </head>
 <body>
+<div class="navbar">
+    <a href="/">홈</a>
+    <a href="/users/me">마이 페이지</a>
+    <div class="right">
+        <div th:if="${user != null}">
+            <div style="display: flex">
+                <span style="color: white" th:text="${user.nickname} + '님 환영합니다'"></span>
+                <form action="/users/logout" method="post">
+                    <button type="submit">로그아웃</button>
+                </form>
+                <form action="/users/delete" method="post">
+                    <button type="submit">회원탈퇴</button>
+                </form>
+                <form action="/users/update" method="get">
+                    <button type="submit">회원정보수정</button>
+                </form>
+            </div>
+        </div>
+        <div th:if="${user == null}">
+            <a href="/users/login">로그인</a>
+            <a href="/users/signup">회원가입</a>
+        </div>
+    </div>
+</div>
 <h2>회원가입이 성공적으로 완료되었습니다!</h2>
 <a href="/users/login">로그인 페이지로 이동</a>
 </body>
