--- a/src/main/resources/templates/task-create.html
+++ b/src/main/resources/templates/task-create.html
@@ -39,6 +39,15 @@
         form {
             padding: 10px 15px;
         }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -66,6 +75,7 @@
         </div>
     </div>
 </div>
+<div class="container">
 <h1>할 일 생성</h1>
 <form th:action="@{/tasks/create}" th:object="${taskCreateRequest}" method="post">
     <div class="form-group">
@@ -88,5 +98,6 @@
 
     <button type="submit">제출</button>
 </form>
+</div>
 </body>
 </html>
